--- a/worker/requirements.txt
+++ b/worker/requirements.txt
@@ -32,3 +32,11 @@ svgelements==1.9.6
 tqdm==4.67.1
 typing_extensions==4.13.2
 watchdog==6.0.0
+fastapi
+uvicorn
+redis
+rq
+openai
+supabase-py
+psycopg2-binary
+manim
